Auth feature created

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Cosmic</string>
+    <string name="web_client_id">719695027291-3tdhepflacml1lckvcmm6svf3q6vu13m.apps.googleusercontent.com</string>
 </resources>
